--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/KeyurDiwan/onnBikes#readme",
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^6.1.2",
     "multer": "^1.4.4"
